Load data from GitHub repository instead of local file

--- a/Statistics.ipynb
+++ b/Statistics.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-13T08:02:55.319080Z",
-     "start_time": "2025-05-13T08:02:54.926970Z"
+     "end_time": "2025-05-13T08:12:32.377064Z",
+     "start_time": "2025-05-13T08:12:32.015747Z"
     }
    },
    "source": [
@@ -19,7 +19,7 @@
     "# data.to_csv(\"data.csv\", index=False)\n",
     "\n",
     "\n",
-    "data = pd.read_csv(\"data.csv\")\n",
+    "data = pd.read_csv(\"https://raw.githubusercontent.com/BahramF73/Statistics-Project/refs/heads/main/data.csv\")\n",
     "\n",
     "x: pd.Series = data.copy()[\"x\"]\n",
     "y: pd.Series = data.copy()[\"y\"]\n",
@@ -131,12 +131,12 @@
        "</div>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 20
   },
   {
    "metadata": {},
